--- a/package.json
+++ b/package.json
@@ -1,61 +1,70 @@
 {
-	"name": "block-juggler",
-	"version": "0.0.2",
-	"displayName": "Block Juggler",
-	"description": "Text extraction, transform, categorization, and shell processing.",
-	"keywords": [
-		"text",
-		"shell"
-	],
-	"author": "Bernard Martis",
-	"publisher": "bernard-martis",
-	"homepage": "https://github.com/bernardm/block-juggler",
-	"bugs": "https://github.com/bernardm/block-juggler/issues",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/bernardm/block-juggler.git"
-	},
-    "license": "GPL-3.0-only",
-	"engines": {
-		"vscode": "^1.34.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:block-juggler.classify"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "block-juggler.classify",
-				"title": "juggler: Parse document"
-			}
-		],
-		"keybindings": [{
-			"command": "block-juggler.classify",
-			"key": "alt+p",
-			"mac": "alt+p",
-			"when": "editorTextFocus"
-		}]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test",
-		"package": "vsce package && code --install-extension block-juggler-0.0.2.vsix"
-	},
-	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
-		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
-	},
-	"dependencies": {
-		"sanitize-filename": "^1.6.1"
-	}
+    "name":"block-juggler",
+    "version":"0.1.1",
+    "displayName":"Block Juggler",
+    "description":"Text transformation, categorization, and shell execution from within the text editor.",
+    "keywords":[
+        "text",
+        "shell"
+    ],
+    "author":{
+        "name":"Bernard Martis"
+    },
+    "categories":[
+        "Other"
+    ],
+    "icon":"images/icon.png",
+    "galleryBanner":{
+        "color":"#68c61c",
+        "theme":"light"
+    },
+    "publisher":"bernard-martis",
+    "homepage":"https://github.com/bernardm/block-juggler",
+    "bugs":"https://github.com/bernardm/block-juggler/issues",
+    "repository":{
+        "type":"git",
+        "url":"git://github.com/bernardm/block-juggler.git"
+    },
+    "license":"GPL-3.0-only",
+    "engines":{
+        "vscode":"^1.34.0"
+    },
+    "activationEvents":[
+        "onCommand:block-juggler.classify"
+    ],
+    "main":"./out/extension.js",
+    "contributes":{
+        "commands":[
+            {
+                "command":"block-juggler.classify",
+                "title":"juggler: Parse document"
+            }
+        ],
+        "keybindings":[
+            {
+                "command":"block-juggler.classify",
+                "key":"alt+p",
+                "mac":"alt+p",
+                "when":"editorTextFocus"
+            }
+        ]
+    },
+    "scripts":{
+        "vscode:prepublish":"npm run compile",
+        "compile":"tsc -p ./",
+        "watch":"tsc -watch -p ./",
+        "postinstall":"node ./node_modules/vscode/bin/install",
+        "test":"npm run compile && node ./node_modules/vscode/bin/test",
+        "package":"vsce package"
+    },
+    "devDependencies":{
+        "typescript":"^3.3.1",
+        "vscode":"^1.1.28",
+        "tslint":"^5.12.1",
+        "@types/node":"^10.12.21",
+        "@types/mocha":"^2.2.42"
+    },
+    "dependencies":{
+        "sanitize-filename":"^1.6.1"
+    }
 }
