--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test-vscode": "npm run compile && node ./node_modules/vscode/bin/test",
-        "test": "npm run compile && mocha --ui bdd ./out/test/*.test.js",
+        "test": "rmdir c:\\Users\\martisb\\blocks && npm run compile && mocha --ui bdd ./out/test/*.test.js",
         "package": "vsce package"
     },
     "devDependencies": {
