--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "block-juggler",
-    "version": "0.1.1",
+    "version": "0.2.1",
     "displayName": "Block Juggler",
     "description": "Text transformation, categorization, and shell execution from within the text editor.",
     "keywords": [
@@ -25,7 +25,7 @@
         "type": "git",
         "url": "git://github.com/bernardm/block-juggler.git"
     },
-    "license": "GPL-3.0-only",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.34.0"
     },
@@ -55,7 +55,7 @@
         "watch": "tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install",
         "test-vscode": "npm run compile && node ./node_modules/vscode/bin/test",
-        "test": "rmdir c:\\Users\\martisb\\blocks && npm run compile && mocha --ui bdd ./out/test/*.test.js",
+        "test": "npm run compile && mocha --ui bdd ./out/test/*.test.js",
         "package": "vsce package"
     },
     "devDependencies": {
@@ -68,5 +68,7 @@
         "typescript": "^3.3.1",
         "vscode": "^1.1.28"
     },
-    "dependencies": {}
+    "dependencies": {
+        "sanitize-filename": "^1.6.1"
+    }
 }
